Update gitignore Add logic and settings to handle file upload Add convertion summary and convert pdf to text pages

--- a/moodle_question_tool/templates/moodle_question_tool/convertion.html
+++ b/moodle_question_tool/templates/moodle_question_tool/convertion.html
@@ -32,9 +32,9 @@
 
         <div id="navbarSupportedContent" class="collapse navbar-collapse">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active"><a href="/" class="nav-link">Home <span class="sr-only">(current)</span></a></li>
+            <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
             <li class="nav-item"><a href="/examples" class="nav-link">Examples</a></li>
-            <li class="nav-item"><a href="/convertion" class="nav-link">Convertion</a></li>
+            <li class="nav-item active"><a href="/convertion" class="nav-link">Convertion <span class="sr-only">(current)</span></a></li>
             <li class="nav-item"><a href="/about" class="nav-link">About</a></li>
           </ul>
         </div>
@@ -43,12 +43,11 @@
   </header>
   
   <main class="text-justify text-wrap pl-4 pr-4 py-3 flex-grow-1" style="width: 100vw; ">
-    <h2>Overview</h2>
-    <p> O moodle toolkit é uma ferramenta criada para facilitar a conversão de arquivos PDF para os dois principais formatos acadêmicos: TeX e GIFT. </p> 
-    <p>TeX é referência mundial para a escrita de artigos científicos e é o padrão utilizado nas grandes revistas e conferências.</p>
-    <p>GIFT é uma extensão do Markdown, utilizado pelo Moodle para gerar os questionários online.</p> 
-    <p>Pensando nisso, foi criada uma forma de que com base em um questionário PDF (como por exemplo as provas do ENADE), fosse gerado um arquivo de texto, que deve ser manualmente formatado em markdown e automaticamente convertido nos formatos desejados.</p>
-    <p>Para mais instruções, veja a página de <a href="/examples">exemplos</a>.</p> 
+    <h1>Convertion</h1>
+    <ul >
+      <li><a href="/convertion/pdf-to-text">PDF to Text</a></li>
+      <li><a href="/convertion/md-to-tex">MD to TeX/GIFT</a></li>
+    </ul>
   </main>
 
   <footer class="align-bottom py-3" style="background-color: #f98012">
