--- a/moodle_question_tool/templates/moodle_question_tool/examples.html
+++ b/moodle_question_tool/templates/moodle_question_tool/examples.html
@@ -14,7 +14,6 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./style.css">
   <title>Moodle Question Toolkit</title>
 </head>
 <body class="h-100 d-flex flex-column">
@@ -22,9 +21,9 @@
     <!-- NAVBAR-->
     <nav class="navbar navbar-expand-lg py-3 navbar-light bg-white shadow-sm">
       <div class="container">
-        <a href="#" class="navbar-brand">
+        <a href="/" class="navbar-brand">
           <!-- Logo Image -->
-          <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.ufms.br%2Fwp-content%2Fuploads%2F2016%2F03%2Flogo.jpg" width="45" alt="" class="d-inline-block align-middle mr-2">
+          <img src="https://www.ufms.br/wp-content/uploads/2016/03/logo.jpg" width="45" alt="" class="d-inline-block align-middle mr-2">
           <!-- Logo Text -->
           <span class="text-uppercase font-weight-semibold">Moodle Toolkit</span>
         </a>
@@ -35,6 +34,7 @@
           <ul class="navbar-nav ml-auto">
             <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
             <li class="nav-item active"><a href="/examples" class="nav-link">Examples <span class="sr-only">(current)</span></a></li>
+            <li class="nav-item"><a href="/convertion" class="nav-link">Convertion</a></li>
             <li class="nav-item"><a href="/about" class="nav-link">About</a></li>
           </ul>
         </div>
