LOTS OF CHANGES

--- a/moodle_question_tool/templates/moodle_question_tool/home.html
+++ b/moodle_question_tool/templates/moodle_question_tool/home.html
@@ -49,6 +49,7 @@
     <p>GIFT é uma extensão do Markdown, utilizado pelo Moodle para gerar os questionários online.</p> 
     <p>Pensando nisso, foi criada uma forma de que com base em um questionário PDF (como por exemplo as provas do ENADE), fosse gerado um arquivo de texto, que deve ser manualmente formatado em markdown e automaticamente convertido nos formatos desejados.</p>
     <p>Para mais instruções, veja a página de <a href="/examples">exemplos</a>.</p> 
+    <button type="button" class="btn btn-primary ml-4" onclick="window.location.href='/convertion';">Ir para conversão</button>
   </main>
 
   <footer class="align-bottom py-3" style="background-color: #f98012">
