--- a/moodle_question_tool/templates/moodle_question_tool/convertion-pdftotext.html
+++ b/moodle_question_tool/templates/moodle_question_tool/convertion-pdftotext.html
@@ -42,6 +42,7 @@
     </nav>
   </header>
   
+  {% block content %}
   <main class="text-justify text-wrap pl-4 pr-4 py-3 flex-grow-1" style="width: 100vw; ">
     <h1>PDF to Text</h1>
     <form method="POST" enctype="multipart/form-data">{% csrf_token %}
@@ -54,14 +55,18 @@
         <p><strong>Dica: </strong>Segure a tecla Ctrl ou Shift para selecionar múltiplos arquivos.</p>
         <div class="container-fluid">
           <button type="submit" class="btn btn-primary">Converter</button>
-          <button type="button" class="btn btn-primary ml-4">Próximo</button>
+          <button type="button" class="btn btn-primary ml-4" onclick="window.location.href='/convertion/md-to-tex';">Próximo</button>
         </div>
       </div>
     </form>
+    {% if url %}
+      <p>Download: <a href="{{ url }}">{{ url }}</a></p>
+    {% endif %}
   </main>
+  {% endblock %}
 
   <script>
-    function parseUploadedFiles(){
+    function parseUploadedFiles() {
       const uploadFilesInput = document.getElementById("uploadfiles");
       let txt = "";
       if ('files' in uploadFilesInput) {
@@ -90,7 +95,7 @@
       }
       document.getElementById("file_path_display").innerHTML = txt;
     }
-    </script>
+  </script>
 
   <footer class="align-bottom py-3" style="background-color: #f98012">
     <div class="container text-center">
